--- a/css/style.css
+++ b/css/style.css
@@ -1,112 +1,111 @@
-@charset UTF-8;
+@charset "UTF-8";
 
-body{
-  font-family: 'Montserrat', sans-serif;
+body {
+  font-family: "Montserrat", sans-serif;
 }
 
-header{
-    background: bisque;
-      width: 1500px;
-      margin: 0 auto;
+header {
+  background: bisque;
+  padding: 20px 0;
 }
 
-div.caixa{
-    width: 940px;
-    position: relative;
-    margin: 0 auto;
+div.caixa {
+  width: 940px;
+  position: relative;
+  margin: 0 auto;
 }
 
-nav{
-    position: absolute;
-    top: 110px;
-    right: 35px;
+nav {
+  position: absolute;
+  top: 110px;
+  right: 0;
 }
 
-nav li{
-    display: inline;
-    margin: 0 0 0 15px;
+nav li {
+  display: inline;
+  margin: 0 0 0 15px;
 }
 
-nav a{
-    text-transform: uppercase;
-    color: #000000;
-    font-weight: bold;
-    font-size: 22px;
-    text-decoration: none;
+nav a {
+  text-transform: uppercase;
+  color: #000000;
+  font-weight: bold;
+  font-size: 22px;
+  text-decoration: none;
 }
 
-nav a:hover{
+nav a:hover {
   color: coral;
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
 .produtos {
-    width: 940px;
-    margin: 0 auto;
-    padding: 50px 0;
+  width: 940px;
+  margin: 0 auto;
+  padding: 50px 0;
 }
 
 .produtos li {
-    display: inline-block;
-    text-align: center;
-    width: 30%;
-    vertical-align: top;
-    margin: 0 1.5%;
-    padding: 30px 20px;
-    box-sizing: border-box;
-    border: 2px solid #000000;
-    border-radius:15px;
-  }
-  
+  display: inline-block;
+  text-align: center;
+  width: 30%;
+  vertical-align: top;
+  margin: 0 1.5%;
+  padding: 30px 20px;
+  box-sizing: border-box;
+  border: 2px solid #000000;
+  border-radius: 15px;
+}
+
 .produtos li:hover {
-    border-color:coral;   
-} 
+  border-color: coral;
+}
 
 .produtos li:active {
-    border-color: #088c19;
+  border-color: #088c19;
 }
 
-.produtos li:hover h2{
-    font-size: 34px;
+.produtos li:hover h2 {
+  font-size: 34px;
 }
 
-.produtos h2{
-    font-size: 30px;
-    font-weight: bold;
+.produtos h2 {
+  font-size: 30px;
+  font-weight: bold;
 }
 
-.produto-descricao{
-   font-size: 18px;  
+.produto-descricao {
+  font-size: 18px;
 }
 
-.produto-preco{
-    font-size: 22px;
-    font-weight: bold;
-    margin-top: 10px;
+.produto-preco {
+  font-size: 22px;
+  font-weight: bold;
+  margin-top: 10px;
 }
 
-footer{
+footer {
   text-align: center;
-  width: 1500px;
-  background-color: bisque;
+  background: bisque;
   padding: 40px 0;
 }
 
-footer p#copyright{
+footer p#copyright {
   color: black;
   font-size: 13px;
   margin-top: 20px;
 }
 
-main{
-  
+main {
+
 }
 
-form{
+form {
   margin: 40px 0;
 }
 
-form label, form legend{
+form label,
+form legend {
   display: block;
   font-size: 20px;
   margin-bottom: 10px;
@@ -119,11 +118,11 @@ form label, form legend{
   width: 50%;
 }
 
-.checkbox{
-  padding: 20px;
+.checkbox {
+  padding: 20px 0;
 }
 
-.enviar{
+.enviar {
   width: 40%;
   padding: 15px 0;
   background: olive;
@@ -136,138 +135,142 @@ form label, form legend{
   cursor: pointer;
 }
 
-.enviar:hover{
+.enviar:hover {
   background: darkolivegreen;
   transform: scale(1.1);
 }
 
-table{
+table {
   margin: 20px 0 40px;
 }
 
 thead {
   background: #555555;
   color: white;
-  font-weight:bold;
+  font-weight: bold;
 }
 
-td, th{
-   border: 1px solid #000000;
-   padding: 8px 15px
- }
+td,
+th {
+  border: 1px solid #000000;
+  padding: 8px 15px;
+}
 /* css da pagina inicial*/
-.banner{
-  height: 900px; width: 1500px;
+.banner {
+  width: 100%;
 }
 
-.titulo-principal{
+.titulo-principal {
   text-align: center;
   font-size: 3em;
   margin: 0 0 1em;
   clear: left;
   text-align: center;
-  color: rgba(0, 0, 0,0.3)
+  color: rgba(0, 0, 0, 0.3);
 }
 
-
-.principal{
+.principal {
   padding: 3em 0;
+  background: #FEFEFE;
   width: 940px;
   margin: 0 auto;
 }
 
-.principal p{
+.principal p {
   margin: 0 0 1em;
-  text-align: center;
-  font-size: 30px;
+  text-align: left;
+  font-size: 16px;
 }
 
-.principal strong{
+.principal strong {
   font-weight: bold;
 }
 
-.principal em{
+.principal em {
   font-style: italic;
 }
 
 .utensilios {
-  width: 150px;
+  width: 120px;
   float: left;
   margin: 0 20px 20px 0;
 }
 
 .mapa {
-  padding: 3em 0; 
+  padding: 3em 0;
+  background: linear-gradient(#FEFEFE, #888888);
 }
-  
+
+.mapa-google{
+  width: 940px;
+  margin: 0 auto;
+}
+
 .mapa p {
   margin: 0 0 2em;
   text-align: center;
 }
 
-.beneficios{
+.beneficios {
   padding: 3em 0;
-    width: 940px;
-    margin: 0 auto;
-    
+  margin: 0 auto;
 }
 
-.conteudo-beneficios{
+.conteudo-beneficios {
   width: 640px;
-  margin:0 auto;
+  margin: 0 auto;
 }
 
-.lista-beneficios{
+.lista-beneficios {
   width: 40%;
   display: inline-block;
   vertical-align: top;
 }
 
-.itens{
+.itens {
   line-height: 1.5;
-  display: inline-block;
 }
 
-.itens:first-child{
+.itens:first-child {
   font-weight: bold;
 }
 
-.itens:before{
+.itens:before {
   content: "⭐";
 }
 
 .imagem-beneficio {
-  width:60%;
+  width: 60%;
   opacity: 0.3;
   transition: 400ms;
+}
+
+.imagem-beneficio:hover {
+  opacity: 1;
   box-shadow: 10px 10px 10px 0 #000000;
 }
 
-.imagem-beneficio:hover{
-  opacity: 1;
-}
-
-.mapa-google{
-  margin-left: 250px;
-}
-
-
-.video{
+.video {
   width: 560px;
-  margin: 3em 3em;
+  margin: 2em auto;
 }
 
-@media screen and(max-width: 480px){
-  .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video{
+@media screen and (max-width: 480px) {
+  .caixa,
+  .principal,
+  .conteudo-beneficios,
+  .mapa-conteudo,
+  .video {
     width: auto;
   }
-  h1{
+  h1 {
     text-align: center;
   }
-  nav{
+  nav {
     position: static;
   }
-  .lista-beneficios, .imagem-beneficio{
+  .lista-beneficios,
+  .imagem-beneficio {
     width: 90%;
   }
 }
